tests/baselines/reference/contextualTypeFunctionObjectPropertyIntersection.errors.txt
tests/cases/compiler/contextualTypeFunctionObjectPropertyIntersection.ts(23,11): error TS7006: Parameter 'ev' implicitly has an 'any' type.


==== tests/cases/compiler/contextualTypeFunctionObjectPropertyIntersection.ts (1 errors) ====
    type Action<TEvent extends { type: string }> = (ev: TEvent) => void;
    
    interface MachineConfig<TEvent extends { type: string }> {
      schema: {
        events: TEvent;
      };
      on?: {
        [K in TEvent["type"]]?: Action<TEvent extends { type: K } ? TEvent : never>;
      } & {
        "*"?: Action<TEvent>;
      };
    }
    
    declare function createMachine<TEvent extends { type: string }>(
      config: MachineConfig<TEvent>
    ): void;
    
    createMachine({
      schema: {
        events: {} as { type: "FOO" } | { type: "BAR" },
      },
      on: {
        FOO: (ev) => {
              ~~
!!! error TS7006: Parameter 'ev' implicitly has an 'any' type.
          ev.type; // should be 'FOO'
        },
      },
    });
    